Added clicked element parameter to context menu handler function

--- a/examples/contextmenu/index.html
+++ b/examples/contextmenu/index.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8" />
     <style type="text/css">
         html, body { height: 100%; }
-        .foo { width: 250px; height: 150px; background-color: #ddd;
+        .testDiv { width: 250px; height: 150px; background-color: #ddd;
             float: left; margin: 20px; text-align: center; line-height: 80px; }
     </style>
 <head>
 
 <body>
-    <div class="foo">
+    <div id="firstDiv" class="testDiv">
         Right-click me!<br />
         <button class="add">Add menu</button>
         <button class="remove">Remove menu</button>
     </div>
-    <div class="foo">
+    <div id="secondDiv" class="testDiv">
         Right-click me!<br />
         <button class="add">Add menu</button>
         <button class="remove">Remove menu</button>
