Fixed context menu example markup

--- a/examples/contextmenu/index.html
+++ b/examples/contextmenu/index.html
@@ -8,7 +8,7 @@
         .testDiv { width: 250px; height: 150px; background-color: #ddd;
             float: left; margin: 20px; text-align: center; line-height: 80px; }
     </style>
-<head>
+</head>
 
 <body>
     <div id="firstDiv" class="testDiv">
